--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.3.2",
+    "entities": "^4.4.0",
     "fastify": "^4.13.0",
     "readabilitySAX": "^1.6.1"
   },
