--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==2.2.3
-jusText==3.0.0
 metadata_parser==0.10.5
 nltk==3.8.1
 requests==2.28.2
 sumy==0.11.0
 numpy==1.24.2
 gunicorn==20.1.0
+trafilatura==1.4.1
