--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml file generated for mavii-text2 on 2023-03-16T14:34:22-07:00
 
-app = "mavii-text2"
+app = "mavii-text"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
@@ -17,8 +17,8 @@ processes = []
   protocol = "tcp"
   script_checks = []
   [services.concurrency]
-    hard_limit = 50
-    soft_limit = 40
+    hard_limit = 8
+    soft_limit = 4
     type = "connections"
 
   [[services.ports]]
