--- a/fly.toml
+++ b/fly.toml
@@ -1,46 +1,39 @@
-# fly.toml file generated for mavii-text2 on 2023-03-16T14:34:22-07:00
+# fly.toml app configuration file generated for mavii-text on 2023-05-22T09:17:07-07:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
 app = "mavii-text"
+primary_region = "iad"
 kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
-
-[env]
+kill_timeout = "5s"
 
 [experimental]
   auto_rollback = true
 
 [[services]]
-  http_checks = []
+  protocol = "tcp"
   internal_port = 5000
   processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
   [services.concurrency]
+    type = "connections"
     hard_limit = 8
     soft_limit = 4
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
     interval = "15s"
+    timeout = "2s"
+    grace_period = "1s"
     restart_limit = 0
-    timeout = "2s"
-
-  [[services.http_checks]]
-    interval = "30s"
-    grace_period = "10s"
-    method = "get"
-    path = "/status"
-    protocol = "http"
-    restart_limit = 10
-    timeout = "2s"
